# reaspeech-lite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml  release.yml  send-release-notes-to-web.yml
Source/: Config.h  Main.cpp
Source/ara/: ReaSpeechLiteDocumentController.h  ReaSpeechLitePlaybackRenderer.h
Source/asr/: ASREngine.h  ASROptions.h  ASRSegment.h  ASRThreadPoolJob.h  WhisperLanguages.h
Source/binary/: index.html
Source/binary/html/: index.html
Source/binary/js/: main.js
Source/plugin/: ReaSpeechLiteAudioProcessorImpl.h
Source/reaper/: IReaperHostApplication.h  ReaperProxy.h
Source/types/: ProcessingLockInterface.h
Source/ui/: NativeFunctions.h  ReaSpeechLiteAudioProcessorEditor.h  Resources.h
Source/utils/: ResamplingDriver.h  ResamplingExporter.h  SafeUTF8.h  SharedTimeSliceThread.h
assets/: index.html
assets/js/: main.js
cmake-local/: WebAssets.cmake  WebView2.cmake
packaging/: installer.iss
scripts/: release.py
source/: Config.h  Main.cpp
source/ara/: ReaSpeechLiteAudioSource.h  ReaSpeechLiteDocumentController.h  ReaSpeechLitePlaybackRenderer.h
source/asr/: ASREngine.h  ASROptions.h  ASRSegment.h  ASRThreadPoolJob.h  ASRThreadPoolJobTypes.h  GenericASRThreadPoolJob.h  ParakeetEngine.cpp  ParakeetEngine.h  ParakeetEngineAPI.h  WhisperLanguages.h
source/plugin/: ReaSpeechLiteAudioProcessor.h  ReaSpeechLiteAudioProcessorImpl.h
source/reaper/: IReaperHostApplication.cpp  IReaperHostApplication.h  ReaperProxy.h  VST3Extensions.h
source/ts/: .gitignore  build.js  jest.config.js  main.ts  package-lock.json  package.json  setupTests.ts  tsconfig.json
source/ts/__tests__/: app.test.ts
source/ts/config/: build.js  jest.config.js
source/ts/src/: ARA.ts  ASR.ts  App.ts  AudioSourceGrid.ts  GridConfig.ts  Native.ts  TranscriptGrid.ts  Utils.ts
source/ts/src/types/: juce-framework-frontend.d.ts
source/ts/tests/: App.test.ts  AudioSourceGrid.test.ts  TranscriptGrid.test.ts  Utils.test.ts
source/ts/tests/__mocks__/: juce-framework-frontend.js
source/ts/tests/mocks/: MockNative.ts
source/types/: MarkerType.h  PlayHeadState.h  ProcessingLockInterface.h
source/ui/: AudioSourceEventEmitter.h  NativeFunctions.h  ReaSpeechLiteAudioProcessorEditor.h  Resources.h
source/utils/: AbortHandler.h  ResamplingDriver.h  ResamplingExporter.h  SafeUTF8.h  SharedTimeSliceThread.h
source2/plugin/: ReaSpeechLiteAudioProcessor.h
source2/reaper/: VST3Extensions.h
source2/types/: MarkerType.h
source2/ui/: ReaSpeechLiteAudioProcessorEditor.h
